<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/start" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/news" />
    </group>

    <!--<item android:title="@string/little">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_little1"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/little1" />-->
            <!--<item-->
                <!--android:id="@+id/nav_little2"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/little2" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
