<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/register_tv_account"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/account"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/register_et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignBottom="@+id/register_tv_account"
        android:layout_alignTop="@+id/register_tv_account"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/register_tv_account" />


    <TextView
        android:id="@+id/register_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_below="@+id/register_tv_account"
        android:layout_alignStart="@+id/register_tv_account"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/register_et_account"
        android:layout_alignStart="@+id/register_et_account"
        android:layout_alignBottom="@+id/register_tv_password"
        android:layout_alignTop="@+id/register_tv_password"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword" />


    <TextView
        android:id="@+id/register_tv_passwordagen"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_below="@+id/register_tv_password"
        android:layout_alignStart="@+id/register_tv_account"
        android:layout_marginTop="20dp"
        android:text="@string/passwordagen"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_et_passwordagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/register_et_password"
        android:layout_alignStart="@+id/register_et_account"
        android:layout_alignBottom="@+id/register_tv_passwordagen"
        android:layout_alignTop="@+id/register_tv_passwordagen"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_et_passwordagen"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/yuanjiaojuxing"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>